--- a/stikbook-frontend/package.json
+++ b/stikbook-frontend/package.json
@@ -11,11 +11,11 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
-    "react-date-picker": "^8.0.1",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-otp-input": "^2.0.2",
     "react-phone-input-2": "^2.13.7",
-    "react-phone-number-input": "^3.0.25",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
