--- a/stikbook-frontend/package.json
+++ b/stikbook-frontend/package.json
@@ -16,7 +16,9 @@
     "react-otp-input": "^2.0.2",
     "react-phone-input-2": "^2.13.7",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3",
+    "react-tabs": "^3.1.1",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
