--- a/stikbook-backend/package.json
+++ b/stikbook-backend/package.json
@@ -17,10 +17,13 @@
     "helmet": "^4.0.0",
     "joi": "^13.1.0",
     "joi-password-complexity": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "loadash": "^1.0.0",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.28",
     "morgan": "^1.10.0",
-    "pug": "^3.0.0"
+    "nodemailer": "^6.4.11",
+    "pug": "^3.0.0",
+    "randomstring": "^1.1.5"
   }
 }
