--- a/stikbook-frontend/package.json
+++ b/stikbook-frontend/package.json
@@ -9,11 +9,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
+    "axios-hooks": "^2.1.0",
     "bootstrap": "^4.5.0",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.4.1",
     "react-otp-input": "^2.0.2",
     "react-phone-input-2": "^2.13.7",
     "react-router-dom": "^5.2.0",
