--- a/stikbook-backend/package.json
+++ b/stikbook-backend/package.json
@@ -11,16 +11,25 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "config": "^3.3.1",
+    "connect": "^3.7.0",
+    "connect-busboy": "0.0.2",
+    "cors": "^2.8.5",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "helmet": "^4.0.0",
     "joi": "^13.1.0",
     "joi-password-complexity": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "loadash": "^1.0.0",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.28",
     "morgan": "^1.10.0",
-    "pug": "^3.0.0"
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
+    "pug": "^3.0.0",
+    "randomstring": "^1.1.5"
   }
 }
