--- a/stikbook-frontend/package.json
+++ b/stikbook-frontend/package.json
@@ -4,21 +4,39 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.0",
+    "antd": "^4.6.1",
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
+    "formik": "^2.1.5",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.3",
+    "react-icons": "^3.11.0",
     "react-otp-input": "^2.0.2",
     "react-phone-input-2": "^2.13.7",
+    "react-player": "^2.6.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-split": "^2.0.9",
+    "react-split-pane": "^0.1.92",
     "react-tabs": "^3.1.1",
+    "react-toastify": "^6.0.8",
+    "reactstrap": "^8.5.1",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
+    "split-js": "^1.0.1",
     "styled-components": "^5.1.1"
   },
   "scripts": {
